# codetrail

./: .gitignore  LICENSE  README.md
hooks/: README.md  auto-adopt.sh  cred-post-tool.sh  cred-pre-tool.sh  cred-scrubber.sh  devlog-artifact.sh  devlog-resume-check.sh  install.sh  log-source-tools.sh  question-discipline.sh  rule6-visual-artifact-reminder.sh  runner-ensure.sh  vault-get.sh
landing/: DEPLOY.md
landing/public/: about.html  demo-devlog.sqlite  eula.html  index.html  install.txt  privacy.html  robots.txt  script.js  sitemap.xml  styles.css  terms.html  viewer.html  viewer.js
landing/scripts/: deploy.mjs
mcp/: README.md
mcp/project-agent-node/: package-lock.json  package.json  tsconfig.json
mcp/project-agent-node/scripts/: smoke.mjs
mcp/project-agent-node/src/: devlog.ts  graph.ts  server.ts
mcp/project-agent-rs/: Cargo.toml
mcp/project-agent-rs/src/: devlog.rs  graph.rs  main.rs
mcp/vault-node/: README.md  package-lock.json  package.json
mcp/vault-node/scripts/: smoke.mjs
mcp/vault-node/src/: server.ts
scripts/: daemon-ctl.sh  runner.sh
template/: .runner-allowlist  CLAUDE.md  QUICKSTART.md  runner.ps1  runner.sh  startup.sh
