[package]
name = "project-agent"
version = "0.1.0"
edition = "2021"
description = "MCP server (Rust): devlog + UC/TC tracking + project routing. Open source MIT. See also project-agent-node/ for the cross-platform default."
license = "MIT"

[[bin]]
name = "project-agent"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
anyhow = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
